[gd_scene load_steps=17 format=3 uid="uid://5rgs0n6s4imr"]

[ext_resource type="Script" path="res://Scripts/menu/main_menu.gd" id="1_tkmkc"]
[ext_resource type="FontFile" uid="uid://gh3mknrglbsr" path="res://Resources/font/The Wild Breath of Zelda.otf" id="2_tu0t6"]
[ext_resource type="FontFile" uid="uid://plk2ssnqqgfy" path="res://Resources/font/MotionControl-Bold.otf" id="3_de8ff"]
[ext_resource type="Script" path="res://Scripts/menu/MainMenu/continue.gd" id="3_rho7t"]
[ext_resource type="Script" path="res://Scripts/menu/MainMenu/press_to_start.gd" id="4_57fqo"]
[ext_resource type="Script" path="res://Scripts/menu/MainMenu/start_game.gd" id="4_d6d1f"]
[ext_resource type="AudioStream" uid="uid://yhf2h45cockg" path="res://Resources/sound/menu_sfx/press_to_start.wav" id="7_ffmyn"]
[ext_resource type="AudioStream" uid="uid://dapt6hwr4h0r2" path="res://Resources/sound/menu_sfx/menu_hover.wav" id="8_m7h5q"]
[ext_resource type="AudioStream" uid="uid://bonopwd1xuju2" path="res://Resources/sound/menu_sfx/menu_select.wav" id="9_kbs70"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1kkq"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_3a0fg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikess"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk17a"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5p8ao"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbq4m"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3n2xt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tkmkc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_top = 1.0
offset_right = 1153.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k1kkq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = 256.0
offset_top = 194.0
offset_right = 839.0
offset_bottom = 518.0
theme = SubResource("Theme_3a0fg")

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tu0t6")
theme_override_font_sizes/font_size = 60
text = "Dungeon Raid"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PressToStart" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_de8ff")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ikess")
text = "Press Start"
script = ExtResource("4_57fqo")

[node name="Continue" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.905769, 0.905769, 0.905769, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_de8ff")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_tk17a")
text = "Continue"
script = ExtResource("3_rho7t")

[node name="StartGame" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.905882, 0.905882, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_de8ff")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5p8ao")
text = "Start Game"
script = ExtResource("4_d6d1f")

[node name="Options" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.905882, 0.905882, 0.905882, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_de8ff")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_qbq4m")
text = "Options
"

[node name="Quit" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_de8ff")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_3n2xt")
text = "Quit"

[node name="PressToStartTimer" type="Timer" parent="MarginContainer/Main"]
process_mode = 3
wait_time = 2.3
one_shot = true

[node name="ContinueTimer" type="Timer" parent="MarginContainer/Main"]
process_mode = 3
wait_time = 2.3
one_shot = true

[node name="StartGameTimer" type="Timer" parent="MarginContainer/Main"]
process_mode = 3
wait_time = 2.3
one_shot = true

[node name="OptionsTimer" type="Timer" parent="MarginContainer/Main"]
process_mode = 3
wait_time = 1.32
one_shot = true

[node name="QuitTimer" type="Timer" parent="MarginContainer/Main"]
process_mode = 3
wait_time = 1.32
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Version 1.0.0"
horizontal_alignment = 1

[node name="copyright" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Copyrighted Â© PorthrisNaagu, 2024 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="Node" parent="."]

[node name="PressToStart" type="AudioStreamPlayer" parent="SFX"]
process_mode = 3
stream = ExtResource("7_ffmyn")
max_polyphony = 5

[node name="Hover" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_m7h5q")
max_polyphony = 5

[node name="Select" type="AudioStreamPlayer" parent="SFX"]
process_mode = 3
stream = ExtResource("9_kbs70")
max_polyphony = 5

[connection signal="pressed" from="MarginContainer/Main/PressToStart" to="." method="_on_press_to_start_pressed"]
[connection signal="focus_entered" from="MarginContainer/Main/Continue" to="." method="_on_continue_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/Main/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Main/Continue" to="." method="_on_continue_pressed"]
[connection signal="focus_entered" from="MarginContainer/Main/StartGame" to="." method="_on_start_game_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/Main/StartGame" to="." method="_on_start_game_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Main/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Main/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Main/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Main/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="MarginContainer/Main/PressToStartTimer" to="." method="_on_press_to_start_timer_timeout"]
[connection signal="timeout" from="MarginContainer/Main/ContinueTimer" to="." method="_on_continue_timer_timeout"]
[connection signal="timeout" from="MarginContainer/Main/StartGameTimer" to="." method="_on_start_game_timer_timeout"]
[connection signal="timeout" from="MarginContainer/Main/OptionsTimer" to="." method="_on_options_timer_timeout"]
[connection signal="timeout" from="MarginContainer/Main/QuitTimer" to="." method="_on_quit_timer_timeout"]
